--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -60,6 +60,9 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #B6B6B4";>
+	<h1><a class="FAQ" href="#General"><General Questions</a></h1>
+	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
+	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
 	<h1><a class="FAQ" href="#Application">Application Questions</a></h1>
 	<h2><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
 	<h2><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
@@ -83,14 +86,22 @@
 		Accelerator projects?</a></h2>
 		<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
 			</a></h2>
-	
-	
-	
-	
-	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
-	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>
 	</div>
 	<div class="container">
+		<h1 id="General" class="FAQ">General Questions</h1>
+		<h2 id="Learning" class="FAQ">Why the focus on learning?</h2>
+		<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
+			learning; we develop technologies and workshops centered around the four Ps of creative learning: 
+			peers, play, passion and projects. We’re keenly aware that a “lack of educational opportunities” in 
+			the Middle East is one of primary "push" factors cited by refugees arriving in Europe. And that as 
+			the war in Syria continues, the crisis around education in the region is only going to become more 
+			acute. </p>
+		<h2 id="RefugeeLearners" class="FAQ">What do you mean by "refugee learners?"</h2>
+		<p class="QA">We’re interested in supporting projects which benefit refugee youth, aged 15-24, who remain in 
+			the Middle East, and want to learn--whether that is in a formal school system or more informally. 
+			The refugee learner does not necessarily have to be the end user of the project--it could also be 
+			parents, teachers etc., but all projects should be beneficial to refugee learners in some capacity.
+		</p>
 		<h1 id="Application" class="FAQ">Application Questions</h1>
 		<h2 id="Eligible" class="FAQ">Who is eligible to participate in the Refugee Learning Accelerator?</h2>
 		<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
@@ -151,20 +162,6 @@
 		<h2 id="Program" class="FAQ">What do participants in the Refugee Learning Accelerator program receive?</h2>
 		<p class="QA">Information on the structure of the Accelerator is available <a class="class2" 
 											      href="/program">here</a>.</p>
-		
-		
-		
-	<h2 id="Learning" class="FAQ">Why the focus on learning?</h2>
-	<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of learning; we develop 
-		technologies and workshops centered around the four Ps of creative learning: peers, play, passion and projects. We’re 
-		keenly aware that a “lack of educational opportunities” in the Middle East is one of primary "push" factors cited by 
-		refugees arriving in Europe. And that as the war in Syria continues, the crisis around education in the region is only 
-		going to become more acute. </p>
-	<h2 id="RefugeeLearners" class="FAQ">What do you mean by "refugee learners?"</h2>
-	<p class="QA">We’re interested in supporting projects which benefit refugee youth, aged 15-24, who remain in the Middle East, 
-		and want to learn--whether that is in a formal school system or more informally. The refugee learner does not 
-		necessarily have to be the end user of the project--it could also be parents, teachers etc., but all projects should be 
-		beneficial to refugee learners in some capacity.</p>
 <!--	
 	<h2>What’s the ultimate aim of the Refugee Learning Accelerator?</h2>
 	<p class="QA">This is a pilot phase and--to a certain extent--an experiment. We believe that the Middle East is facing a series of crisis around refugees, youth employment, and education, but that it already has many of the tools necessary to respond to these crises. We’re passionate about supporting young computer scientists and engineers to think critically about the future of learning.</p>
