--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -60,7 +60,7 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #B6B6B4";>
-	<h1><a class="FAQ" href="#General"><General Questions</a></h1>
+	<h1><a class="FAQ" href="#General">General Questions</a></h1>
 	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
 	<h1><a class="FAQ" href="#Application">Application Questions</a></h1>
