--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -116,7 +116,7 @@
 		<h2 id="Refugee" class="FAQ">Do I have to be a refugee to participate in the Accelerator?</h2>
 		<p class="QA">No. We're looking to support a community of innovators from the Middle East with an interest 
 			in using their tech skills to support refugee learners, but you don't have to be a refugee.</p>
-		<h2 id="MiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2
+		<h2 id="MiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
 			<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are 
 			currently living. Unfortunately, due to restrictions on our funding, we are unable to work with 
 			current residents of Syria.</p>	
