--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -60,10 +60,10 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #B6B6B4";>
-	<h1><a class="FAQ" href="#General">General Questions</a></h1>
+	<h2><a class="FAQ2" href="#General">General Questions</a></h2>
 	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
-	<h1><a class="FAQ" href="#Application">Application Questions</a></h1>
+	<h2><a class="FAQ2" href="#Application">Application Questions</a></h2>
 	<h2><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
 	<h2><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
 	<h2><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
@@ -74,7 +74,7 @@
 		apply?</a></h2>
 	<h2><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
 		still apply?</a></h2>
-	<h1><a class="FAQ" href="#ProgramQuestions">Program Questions</a></h1>
+	<h2><a class="FAQ2" href="#ProgramQuestions">Program Questions</a></h2>
 	<h2><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
 	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
 	<h2><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
@@ -88,7 +88,7 @@
 			</a></h2>
 	</div>
 	<div class="container">
-		<h1 id="General" class="FAQ">General Questions</h1>
+		<h2 id="General" class="FAQ2">General Questions</h2>
 		<h2 id="Learning" class="FAQ">Why the focus on learning?</h2>
 		<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
 			learning; we develop technologies and workshops centered around the four Ps of creative learning: 
@@ -102,7 +102,7 @@
 			The refugee learner does not necessarily have to be the end user of the project--it could also be 
 			parents, teachers etc., but all projects should be beneficial to refugee learners in some capacity.
 		</p>
-		<h1 id="Application" class="FAQ">Application Questions</h1>
+		<h2 id="Application" class="FAQ2">Application Questions</h2>
 		<h2 id="Eligible" class="FAQ">Who is eligible to participate in the Refugee Learning Accelerator?</h2>
 		<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
 		<h2 id="Individual" class="FAQ">Can I apply as an individual?</h2>
@@ -130,7 +130,7 @@
 			stage.</a> We want you to be up to speed on what is currently happening in the field of digital 
 			education for refugees and connect with other teams. The Ideate stage is designed to do just that.
 		</p>
-		<h1 id="ProgramQuestions" class="FAQ">Program Questions</h1>
+		<h2 id="ProgramQuestions" class="FAQ2">Program Questions</h2>
 		<h2 id="TimeCommitment" class="FAQ">What is the time commitment?</h2>
 		<p class="QA">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 
 			hours per week on activities related to the Refugee Learning Accelerator. In the Prototype phase 
