--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -60,10 +60,10 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #B6B6B4";>
-	<h2 class="FAQ2"><a class="FAQ" href="#General">General Questions</a></h2>
+	<h2 class="FAQ2"><a class="FAQ2" href="#General">General Questions</a></h2>
 	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
-	<h2 class="FAQ2"><a class="FAQ" href="#Application">Application Questions</a></h2>
+	<h2 class="FAQ2"><a class="FAQ2" href="#Application">Application Questions</a></h2>
 	<h2><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
 	<h2><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
 	<h2><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
@@ -74,7 +74,7 @@
 		apply?</a></h2>
 	<h2><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
 		still apply?</a></h2>
-	<h2 class="FAQ2"><a class="FAQ" href="#ProgramQuestions">Program Questions</a></h2>
+	<h2 class="FAQ2"><a class="FAQ2" href="#ProgramQuestions">Program Questions</a></h2>
 	<h2><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
 	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
 	<h2><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
