--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -61,30 +61,30 @@
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #B6B6B4";>
 	<h2 class="FAQ2"><a class="FAQ2" href="#General">General Questions</a></h2>
-	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
-	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
+	<h2 class="FAQ"><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
 	<h2 class="FAQ2"><a class="FAQ2" href="#Application">Application Questions</a></h2>
-	<h2><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
-	<h2><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
-	<h2><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
-	<h2><a class="FAQ" href="#Refugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
-	<h2><a class="FAQ" href="#MiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
+	<h2 class="FAQ"><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#Refugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#MiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</h2>
-	<h2><a class="FAQ" href="#Abroad">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still 
+	<h2 class="FAQ"><a class="FAQ" href="#Abroad">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still 
 		apply?</a></h2>
-	<h2><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
+	<h2 class="FAQ"><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
 		still apply?</a></h2>
 	<h2 class="FAQ2"><a class="FAQ2" href="#ProgramQuestions">Program Questions</a></h2>
-	<h2><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
-	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
-	<h2><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
-	<h2><a class="FAQ" href="#Travel">If my team is accepted into the Prototype phase, do we 
+	<h2 class="FAQ"><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#Travel">If my team is accepted into the Prototype phase, do we 
 		have to cover the cost of travel to Amman?</a></h2>
-	<h2><a class="FAQ" href="#MIT">Will participants travel to MIT in Cambridge, Massachusetts?</a></h2>
-	<h2><a class="FAQ" href="#Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
-	<h2><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning 
+	<h2 class="FAQ"><a class="FAQ" href="#MIT">Will participants travel to MIT in Cambridge, Massachusetts?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning 
 		Accelerator projects?</a></h2>
-		<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
+		<h2 class="FAQ"><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
 			</a></h2>
 	</div>
 	<div class="container">
