--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -59,7 +59,7 @@
 																  
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
-<div class="container"  style="border: 15px solid #B6B6B4";>
+<div class="container"  style="border-bottom: 15px solid #B6B6B4";>
 	<h2 class="FAQ2"><a class="FAQ2" href="#General">General Questions</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
