--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -87,7 +87,7 @@
 		<h2 class="FAQ"><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
 			</a></h2>
 	</div>
-	<div class="container">
+	<div class="container" style="padding-top: 25px">
 		<h2 id="General" class="FAQ2">General Questions</h2>
 		<h2 id="Learning" class="FAQ">Why the focus on learning?</h2>
 		<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
