--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -84,7 +84,7 @@
 	<h2 class="FAQ"><a class="FAQ" href="#Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning 
 		Accelerator projects?</a></h2>
-		<h2 class="FAQ"><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
+		<h2 class="FAQ" style="padding-bottom:45px"><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
 			</a></h2>
 	</div>
 	<div class="container" style="padding-top: 45px">
