--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -66,7 +66,7 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border-bottom: 15px solid #B6B6B4";>
-	<h2><a href="javascript:toggleDiv('General');" style="background-color: #B6B6B4; color: #000000 class="FAQ2">General Questions</a></h2>
+	<h2><a href="javascript:toggleDiv('General');" style="background-color: #B6B6B4; color: #000000" class="FAQ2">General Questions</a></h2>
 	<div id="General" style="display: none">
 	<h2 class="FAQ"><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
