--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -66,10 +66,23 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border-bottom: 15px solid #B6B6B4";>
-	<h2><a href="javascript:toggleDiv('General');" style="background-color: #B6B6B4; color: #000000" class="FAQ2">General Questions</a></h2>
-	<div id="General" style="display: none">
-	<h2 class="FAQ"><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>	
+	<h2 class="FAQ2"><a class="FAQ2">General Questions</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Learning');" style="color: #000000">Why the focus on learning?</a></h2>
+	<div id="Learning" style="display: none">
+		<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
+			learning; we develop technologies and workshops centered around the four Ps of creative learning: 
+			peers, play, passion and projects. We’re keenly aware that a “lack of educational opportunities” in 
+			the Middle East is one of primary "push" factors cited by refugees arriving in Europe. And that as 
+			the war in Syria continues, the crisis around education in the region is only going to become more 
+			acute. </p>
+	</div>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('RefugeeLearners');" style="color: #000000">What do you mean by "refugee learners?"</a></h2>
+	<div id="RefugeeLearners" style="display: none">
+		<p class="QA">We’re interested in supporting projects which benefit refugee youth, aged 15-24, who remain in 
+			the Middle East, and want to learn--whether that is in a formal school system or more informally. 
+			The refugee learner does not necessarily have to be the end user of the project--it could also be 
+			parents, teachers etc., but all projects should be beneficial to refugee learners in some capacity.
+		</p>	
 	</div>
 	<h2 class="FAQ2"><a class="FAQ2" href="#Application">Application Questions</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
@@ -96,20 +109,6 @@
 			</a></h2>
 	</div>
 	<div class="container" style="padding-top: 45px">
-		<h2 id="General" class="FAQ2">General Questions</h2>
-		<h2 id="Learning" class="FAQ">Why the focus on learning?</h2>
-		<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
-			learning; we develop technologies and workshops centered around the four Ps of creative learning: 
-			peers, play, passion and projects. We’re keenly aware that a “lack of educational opportunities” in 
-			the Middle East is one of primary "push" factors cited by refugees arriving in Europe. And that as 
-			the war in Syria continues, the crisis around education in the region is only going to become more 
-			acute. </p>
-		<h2 id="RefugeeLearners" class="FAQ">What do you mean by "refugee learners?"</h2>
-		<p class="QA">We’re interested in supporting projects which benefit refugee youth, aged 15-24, who remain in 
-			the Middle East, and want to learn--whether that is in a formal school system or more informally. 
-			The refugee learner does not necessarily have to be the end user of the project--it could also be 
-			parents, teachers etc., but all projects should be beneficial to refugee learners in some capacity.
-		</p>
 		<h2 id="Application" class="FAQ2">Application Questions</h2>
 		<h2 id="Eligible" class="FAQ">Who is eligible to participate in the Refugee Learning Accelerator?</h2>
 		<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
