--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -66,7 +66,7 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border-bottom: 15px solid #B6B6B4";>
-	<h2 class="FAQ2"><a class="FAQ2">General Questions</a></h2>
+	<h2 class="FAQ2">General Questions</h2>
 	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Learning');" style="color: #000000">Why the focus on learning?</a></h2>
 	<div id="Learning" style="display: none">
 		<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
@@ -76,14 +76,12 @@
 			the war in Syria continues, the crisis around education in the region is only going to become more 
 			acute. </p>
 	</div>
-	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('RefugeeLearners');" style="color: #000000">What do you mean by "refugee learners?"</a></h2>
-	<div id="RefugeeLearners" style="display: none">
-		<p class="QA">We’re interested in supporting projects which benefit refugee youth, aged 15-24, who remain in 
-			the Middle East, and want to learn--whether that is in a formal school system or more informally. 
-			The refugee learner does not necessarily have to be the end user of the project--it could also be 
-			parents, teachers etc., but all projects should be beneficial to refugee learners in some capacity.
-		</p>	
-	</div>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('RefugeeLearners');" style="color: #000000">What do you mean by 
+		"refugee learners?"</a></h2>
+	<p id="RefugeeLearners" style="display:none" class="QA">We’re interested in supporting projects which benefit refugee youth, 
+		aged 15-24, who remain in the Middle East, and want to learn--whether that is in a formal school system or more 
+		informally. The refugee learner does not necessarily have to be the end user of the project--it could also be parents, 
+		teachers etc., but all projects should be beneficial to refugee learners in some capacity.</p>	
 	<h2 class="FAQ2"><a class="FAQ2" href="#Application">Application Questions</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
