--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -67,25 +67,32 @@
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border-bottom: 15px solid #B6B6B4";>
 	<h2 class="FAQ2">General Questions</h2>
-	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Learning');" style="color: #000000">Why the focus on learning?</a></h2>
-	<div id="Learning" style="display: none">
-		<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
-			learning; we develop technologies and workshops centered around the four Ps of creative learning: 
-			peers, play, passion and projects. We’re keenly aware that a “lack of educational opportunities” in 
-			the Middle East is one of primary "push" factors cited by refugees arriving in Europe. And that as 
-			the war in Syria continues, the crisis around education in the region is only going to become more 
-			acute. </p>
-	</div>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Learning');" style="color: #000000">Why the focus on learning?</a>
+	</h2>
+	<p id="Learning" class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
+		learning; we develop technologies and workshops centered around the four Ps of creative learning: peers, play, passion 
+		and projects. We’re keenly aware that a “lack of educational opportunities” in the Middle East is one of primary "push" 
+		factors cited by refugees arriving in Europe. And that as the war in Syria continues, the crisis around education in the 
+		region is only going to become more acute. </p>
 	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('RefugeeLearners');" style="color: #000000">What do you mean by 
 		"refugee learners?"</a></h2>
-	<p id="RefugeeLearners" style="display:none" class="QA">We’re interested in supporting projects which benefit refugee youth, 
+	<p id="RefugeeLearners" class="QA">We’re interested in supporting projects which benefit refugee youth, 
 		aged 15-24, who remain in the Middle East, and want to learn--whether that is in a formal school system or more 
 		informally. The refugee learner does not necessarily have to be the end user of the project--it could also be parents, 
 		teachers etc., but all projects should be beneficial to refugee learners in some capacity.</p>	
 	<h2 class="FAQ2"><a class="FAQ2" href="#Application">Application Questions</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Eligible');" style="color: #000000">Who is eligible to participate 
+		in the Refugee Learning Accelerator?</a></h2>
+	<p class="QA" id="Eligible">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Individual');" style="color: #000000">Can I apply as an individual?
+		</a></h2>
+	<p class="QA" id="Individual">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can 
+		head over to our <a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to 
+		find other individuals interested in forming a team.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Team');" style="color: #000000">Does my team all have to be located 
+		in one place?</a></h2>
+	<p class="QA" id="Team">No. It will probably be easier to work together if at least a portion of your team is co-located, but it 
+		is not a requirement.</p>
 	<h2 class="FAQ"><a class="FAQ" href="#Refugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#MiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</h2>
@@ -93,6 +100,7 @@
 		apply?</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
 		still apply?</a></h2>
+	
 	<h2 class="FAQ2"><a class="FAQ2" href="#ProgramQuestions">Program Questions</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
 	<h2 class="FAQ"><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
@@ -108,16 +116,6 @@
 	</div>
 	<div class="container" style="padding-top: 45px">
 		<h2 id="Application" class="FAQ2">Application Questions</h2>
-		<h2 id="Eligible" class="FAQ">Who is eligible to participate in the Refugee Learning Accelerator?</h2>
-		<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
-		<h2 id="Individual" class="FAQ">Can I apply as an individual?</h2>
-		<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you 
-			can head over to our <a href="https://www.facebook.com/groups/147496302487491" 
-						class="class2">Facebook Marketplace</a> to find other individuals interested 
-			in forming a team.</p>
-		<h2 id="Team" class="FAQ">Does my team all have to be located in one place?</h2>
-		<p class="QA">No. It will probably be easier to work together if at least a portion of your team is 
-			co-located, but it is not a requirement.</p>
 		<h2 id="Refugee" class="FAQ">Do I have to be a refugee to participate in the Accelerator?</h2>
 		<p class="QA">No. We're looking to support a community of innovators from the Middle East with an interest 
 			in using their tech skills to support refugee learners, but you don't have to be a refugee.</p>
