--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -93,79 +93,63 @@
 		in one place?</a></h2>
 	<p class="QA" id="Team">No. It will probably be easier to work together if at least a portion of your team is co-located, but it 
 		is not a requirement.</p>
-	<h2 class="FAQ"><a class="FAQ" href="#Refugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#MiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
-	</h2>
-	<h2 class="FAQ"><a class="FAQ" href="#Abroad">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still 
-		apply?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
-		still apply?</a></h2>
-	
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Refugee');" style="color: #000000">Do I have to be a refugee to 
+		participate in the Accelerator?</a></h2>
+	<p class="QA" id="Refugee">No. We're looking to support a community of innovators from the Middle East with an interest in using 
+		their tech skills to support refugee learners, but you don't have to be a refugee.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('MiddleEast');" style="color: #000000">I’m a refugee and no longer 
+		live in the Middle East, can I still apply?</a></h2>
+	<p class="QA" id="MiddleEast">Definitely! Refugees from the Middle East are eligible to apply from wherever they are currently 
+		living. Unfortunately, due to restrictions on our funding, we are unable to work with current residents of Syria.</p>	
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Abroad');" style="color: #000000">I’m Lebanese/ Jordanian/ Iraqi/ 
+		Palestinian/ Syrian, but live abroad, can I still apply?</a></h2>
+	<p class="QA" id="Abroad">Definitely! However, in the application we will ask about your future plans and commitment to the 
+		region. We’re looking to support projects that will be based in the Middle East.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Idea');" style="color: #000000">I already have an idea about using 
+		technology to support refugee learners, can I still apply?</a></h2>
+	<p class="QA" id="Idea">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> 
+		We want you to be up to speed on what is currently happening in the field of digital education for refugees and connect 
+		with other teams. The Ideate stage is designed to do just that.</p>
 	<h2 class="FAQ2"><a class="FAQ2" href="#ProgramQuestions">Program Questions</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#Travel">If my team is accepted into the Prototype phase, do we 
-		have to cover the cost of travel to Amman?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#MIT">Will participants travel to MIT in Cambridge, Massachusetts?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
-	<h2 class="FAQ"><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning 
-		Accelerator projects?</a></h2>
-		<h2 class="FAQ" style="padding-bottom:45px"><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
-			</a></h2>
-	</div>
-	<div class="container" style="padding-top: 45px">
-		<h2 id="Application" class="FAQ2">Application Questions</h2>
-		<h2 id="Refugee" class="FAQ">Do I have to be a refugee to participate in the Accelerator?</h2>
-		<p class="QA">No. We're looking to support a community of innovators from the Middle East with an interest 
-			in using their tech skills to support refugee learners, but you don't have to be a refugee.</p>
-		<h2 id="MiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
-			<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are 
-			currently living. Unfortunately, due to restrictions on our funding, we are unable to work with 
-			current residents of Syria.</p>	
-		<h2 id="Abroad" class="FAQ">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I 
-			still apply?</h2>
-		<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to 
-			the region. We’re looking to support projects that will be based in the Middle East.</p>
-		<h2 id="Idea" class="FAQ">I already have an idea about using technology to support refugee learners, can I 
-			still apply?</h2>
-		<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate 
-			stage.</a> We want you to be up to speed on what is currently happening in the field of digital 
-			education for refugees and connect with other teams. The Ideate stage is designed to do just that.
-		</p>
-		<h2 id="ProgramQuestions" class="FAQ2">Program Questions</h2>
-		<h2 id="TimeCommitment" class="FAQ">What is the time commitment?</h2>
-		<p class="QA">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 
-			hours per week on activities related to the Refugee Learning Accelerator. In the Prototype phase 
-			teams will spend a week together in Amman. Overall, the Accelerator is designed to be a part-time 
-			commitment. We do not expect you to quit your job or suspend your schooling to work on this.</p>
-		<h2 id="ForProfit" class="FAQ">Does our idea have to be for-profit?</h2>
-		<p class="QA">No, definitely not! We want teams to think about the financial sustainability of their 
-			projects, but there are many different ways to achieve that, both non-profit and for-profit.</p>
-		<h2 id="OfficeSpace" class="FAQ">Do you provide office space?</h2>
-		<p class="QA">No. We are not able to provide any office space in the Ideate phase. In the Incubate phase, if 
-			necessary, we will coordinate with partner organizations to find office space wherever the team is 
-			located.</p>	
-		<h2 id="Travel" class="FAQ">If my team is accepted into the <a class="class2" href="/program">Prototype 
-			phase</a>, do we have to cover the cost of travel to Amman?</h2>
-		<p class="QA">No. The Refugee Learning Accelerator will cover the cost of travel for all successful teams. 
-			However, it is your responsibility to make sure that you have a valid passport.</p>
-		<h2 id="MIT" class="FAQ">Will participants travel to MIT in Cambridge, Massachusetts?</h2>
-		<p class="QA">No. Successful participants will be brought together in Beirut or Amman. There will be no 
-			travel to the U.S.</p>
-		<h2 id="Certificate" class="FAQ">Upon completion of the program, will I receive a certificate?</h2>
-		<p class="QA">Yes, you will receive a certificate of completion. However, this is not an accredited MIT 
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('TimeCommitment');" style="color: #000000">What is the time 
+		commitment?</a></h2>
+	<p class="QA" id="TimeCommitment">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 
+		hours per week on activities related to the Refugee Learning Accelerator. In the Prototype phase teams will spend a week 
+		together in Amman. Overall, the Accelerator is designed to be a part-time commitment. We do not expect you to quit your 
+		job or suspend your schooling to work on this.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('ForProfit');" style="color: #000000">Does our idea have to be for-
+		profit?</a></h2>
+	<p class="QA" id="ForProfit">No, definitely not! We want teams to think about the financial sustainability of their projects, 
+		but there are many different ways to achieve that, both non-profit and for-profit.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('OfficeSpace');" style="color: #000000">Do you provide office space?
+		</a></h2>
+	<p class="QA" id="OfficeSpace">No. We are not able to provide any office space in the Ideate phase. In the Incubate phase, if 
+		necessary, we will coordinate with partner organizations to find office space wherever the team is located.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Travel');" style="color: #000000">If my team is accepted into the 
+		Prototype phase, do we have to cover the cost of travel to Amman?</a></h2>
+	<p class="QA" id="Travel">No. The Refugee Learning Accelerator will cover the cost of travel for all successful teams. However, 
+		it is your responsibility to make sure that you have a valid passport.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('MIT');" style="color: #000000">Will participants travel to MIT in 
+		Cambridge, Massachusetts?</a></h2>
+	<p class="QA" id="MIT">No. Successful participants will be brought together in Beirut or Amman. There will be no travel to the 
+		U.S.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Certificate');" style="color: #000000">Upon completion of the 
+		program, will I receive a certificate?</a></h2>
+	<p class="QA" id="Certificate">Yes, you will receive a certificate of completion. However, this is not an accredited MIT 
 			education program and does not count towards an MIT degree.</p>
-		<h2 id="IntellectualProperty" class="FAQ">Does MIT own the intellectual property of Refugee Learning 
-			Accelerator projects?</h2>
-		<p class="QA">Participants retain all intellectual property in their work, but we require contributions 
-			during the Ideate phase to be openly licensed (software under an open source initiative <a 
-			href="https://opensource.org/licenses" class="class2">approved license</a>; content under 
-		<a href="https://creativecommons.org/licenses/by/4.0/" class="class2">CC BY</a>).</p>
-		<h2 id="Program" class="FAQ">What do participants in the Refugee Learning Accelerator program receive?</h2>
-		<p class="QA">Information on the structure of the Accelerator is available <a class="class2" 
-											      href="/program">here</a>.</p>
-<!--	
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('IntellectualProperty');" style="color: #000000">Does MIT own the 
+		intellectual property of Refugee Learning Accelerator projects?</a></h2>
+	<p class="QA" id="IntellectualProperty">Participants retain all intellectual property in their work, but we require 
+		contributions during the Ideate phase to be openly licensed (software under an open source initiative <a 
+			href="https://opensource.org/licenses" class="class2">approved license</a>; content under <a 
+			href="https://creativecommons.org/licenses/by/4.0/" class="class2">CC BY</a>).</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Program');" style="color: #000000">What do participants in the 
+		Refugee Learning Accelerator program receive?</a></h2>
+	<p class="QA" id="Program">Information on the structure of the Accelerator is available <a class="class2" 
+												   href="/program">here</a>.</p>
+	</div>
+<!--
+<div>
 	<h2>What’s the ultimate aim of the Refugee Learning Accelerator?</h2>
 	<p class="QA">This is a pilot phase and--to a certain extent--an experiment. We believe that the Middle East is facing a series of crisis around refugees, youth employment, and education, but that it already has many of the tools necessary to respond to these crises. We’re passionate about supporting young computer scientists and engineers to think critically about the future of learning.</p>
 	<h2>How can I get involved in the program?</h2>
@@ -175,10 +159,11 @@
 2. Fill out the form on the Apply page with your contact details<br>
 3. We’ll email you when applications open in mid-August </p>
 			    <p class="QA">If you don’t fit that criteria, but are still interested in supporting the project, email us at <a href="mailto:refugeelearning@media.mit.edu" class="class2">refugeelearning@media.mit.edu</a></p>
--->
+
 		     
 					       
 										       </div>
+-->
 										       </section>
 
 										  </header>
