--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -65,7 +65,7 @@
 																  
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
-<div class="container"  style="border-bottom: 15px solid #B6B6B4";>
+<div class="container">
 	<h2 class="FAQ2">General Questions</h2>
 	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Learning');" style="color: #000000">Why the focus on learning?</a>
 	</h2>
