--- a/about/index.html
+++ b/about/index.html
@@ -62,10 +62,10 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 text-center">
                             <div class="service-box">
-                            <img src="/Advisor/" alt="Advisor1">
+                            <img src="/Advisor/" alt="Haifa Dia Al-Attia">
     
-                                <h3>Advisor #1</h3>
-                                <p>Bio</p>
+                                <h3>Haifa Dia Al-Attia</h3>
+                                <p>Haifa has been leading the Queen Rania Foundation for Education and Development (QRF), an NGO that is charged with influencing national policy and leading innovation in education towards improving the quality and state of that offering in Jordan and improving the learning outcomes of students.<a class="class3" href="http://www.qrf.org/qrf_managers">Click here to learn more...</a> </p>
                             </div>
                         </div>
                     </div>
