--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
                 <p>The Refugee Learning Accelerator supports engineers and computer scientists from the Middle East to create technologies for refugee learners. We provides access to learning, mentorship, and funding. The Accelerator is a project of the Media Lab Learning Initiative. The Media Lab is an antidisciplinary research lab at the Massachusetts Institute of Technology that designs technologies for people to create a better future. </p>
             </div>
 	</div>
-				    <p style="position: fixed; bottom: 0; right:0;"> Photo Credit: Andy Ryan</p>
+				    <div style="position: fixed; bottom: 0; right:0;"><p> Photo Credit: Andy Ryan</p></div>
 	</header>
           <section id="Advisors">
                 <div class="container">
