--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -46,12 +46,12 @@
 	</nav>
 
 						   <header class="FAQ" style="text-align: left; background-position:center; padding-
-									      top:30px">
+									      top:30px; color:white">
 <div class="header-content">
           <div class="header-content-inner">
               <h1 id="homeHeading">FAQ</h1>
 					   <hr>
-				  <p style="color: #000000">Don't see what you are looking for below?<br>Email us at <a class="class2" 
+				  <p style="color: white">Don't see what you are looking for below?<br>Email us at <a class="class2" 
 															style="color: 
 					  #0020C2" href="mailto:refugeelearning@media.mit.edu">refugeelearning@media.mit.edu</a></p>
 																  
