--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
 			    <li><a class="active class1" href="/about">About</a></li>
                 <li><a href="/program">How it Works</a></li>
                 <li><a href="/FAQ">FAQ</a></li>
-                <li><a href="/apply" class="class4">Apply</a></li>
+                <li><a href="/apply">Apply</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
