--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -53,7 +53,7 @@
 					   <hr>
 				  <p style="color: white">Don't see what you are looking for below?<br>Email us at <a class="class2" 
 															style="color: 
-					 #368BC1" href="mailto:refugeelearning@media.mit.edu">refugeelearning@media.mit.edu</a></p>
+					  #FFCBA4" href="mailto:refugeelearning@media.mit.edu">refugeelearning@media.mit.edu</a></p>
 																  
 	</div> 
 																  
