--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -14,7 +14,7 @@
 			<script src="/js/bootstrap.min.js"></script>
 			<script src="/js/npm.js"></script>
 			<script type="text/javascript">$(document).ready(function() {$('dropdown-toggle').dropdown()});</script>
-			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+			<!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>-->
 			<script type="text/javascript">function toggleDiv(divId) {$("#"+divId).toggle();}</script>
 	</head>
 						      <body>
