--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -88,9 +88,11 @@
 		in one place?</a></h2>
 	<p class="QA" id="Team">No. It will probably be easier to work together if at least a portion of your team is co-located, but it 
 		is not a requirement.</p>
-	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Refugee');" style="color: #000000">Do I have to be a refugee to 
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Refugee');"style="color: #000000">I'm a refugee, can I apply?</a></h2>
+	<p class="QA" id="Refugee">Certainly. Refugees are welcomed and encouraged to apply.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('NotRefugee');" style="color: #000000">Do I have to be a refugee to 
 		participate in the Accelerator?</a></h2>
-	<p class="QA" id="Refugee">No. We're looking to support a community of innovators from the Middle East with an interest in using 
+	<p class="QA" id="NotRefugee">No. We're looking to support a community of innovators from the Middle East with an interest in using 
 		their tech skills to support refugee learners, but you don't have to be a refugee.</p>
 	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('MiddleEast');" style="color: #000000">I’m a refugee and no longer 
 		live in the Middle East, can I still apply?</a></h2>
