--- a/apply/index.html
+++ b/apply/index.html
@@ -57,7 +57,7 @@
 			<h2>Who Can Apply</h2>
 
 	<li class="list">Computer scientists, electrical engineers and designers from Syria,<b>*</b> Jordan, Lebanon, Iraq and Palestine, who want to use their tech skills to support refugee learners.</li> 
- 	<li class="list">Ideal participants are active on Stack Overflow, know their way around Github repositories, and have built things at a hackathon or two. These are not requirements however. If you don't have all these skills, you can find a team to balance your strengths and weaknesses.</li>
+ 	<li class="list">Ideal participants are the kind of people who are active on Stack Overflow, know their way around GitHub repositories, or have built things at a hackathon or two.</li>
 	<li class="list"> You must apply in a team of 2-5 people. If you don't have people to team up with head over to our <a class="class2" href="https://www.facebook.com/groups/147496302487491">Facebook Marketplace</a> to find other prospective participants with complementary skills. </li>
 	<li class="list">You must have a working knowledge of Arabic and English.</li>
     	<li class="list">You must have a valid passport/travel documents. Successful participants will be invited to a workship in Amman or Beirut during the <a class="class2" href="/program">Prototype phase</a>.</li>
