--- a/apply/index.html
+++ b/apply/index.html
@@ -70,7 +70,7 @@
 			<br>* Unfortunately we are unable to work with current residents of Syria; Syrians living elsewhere in the Middle East or abroad are eligible; for Jordan, Lebanon, Iraq or Palestine, applicants may be residents and/or citizens.
 			</p>
 			
-			<p style="font-size: 18px; line-height:1.4em;">Please visit our <a href="/FAQ" class="class2">FAQ</a> page for answers to specific questions.
+			<p style="font-size: 18px; line-height:1.4em;"><br>Please visit our <a href="/FAQ" class="class2">FAQ</a> page for answers to specific questions.
 			<br>If you don’t meet these criteria and are still interested in supporting the project, please email <a class="class2" href="mailto:refugeelearning@media.mit.edu">refugeelearning@media.mit.edu</a>.
 			</p>
 	
