--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -79,6 +79,8 @@
 	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Eligible');" style="color: #000000">Who is eligible to participate 
 		in the Refugee Learning Accelerator?</a></h2>
 	<p class="QA" id="Eligible">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
+	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Degree');" style="color: #000000">Do I need to have a degree in Computer Science or Engineering to apply?</a></h2>
+	<p class="QA" id="Degree">No. However, this is not a coding academy. We expect you and your team to have relevant coding experience. Ideal participants are the kind of people who are active on Stack Overflow, know their way around GitHub repositories, or have built things at a hackathon or two.</p>
 	<h2 class="FAQ"><a class="FAQ" href="javascript:toggleDiv('Individual');" style="color: #000000">Can I apply as an individual?
 		</a></h2>
 	<p class="QA" id="Individual">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can 
