--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -60,15 +60,15 @@
 <section style="padding: 10%; padding-top: 5%;">
 	<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="General Questions">
+    <div class="panel-heading" role="tab" id="GeneralQuestions">
     <h2 class="FAQ2">General Questions</h2>
       <h2 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#Learning" aria-expanded="true" aria-controls="collapseOne">
+        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#Learning" aria-expanded="false" aria-controls="Learning">
         Why the focus on learning?
         </a>
       </h2>
     </div>
-    <div id="Learning" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+    <div id="Learning" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="GeneralQuestions">
       <div class="panel-body">
       Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of 
   learning; we develop technologies and workshops centered around the four Ps of creative learning: peers, play, passion 
@@ -80,12 +80,12 @@
   <div class="panel panel-default">
     <div class="panel-heading" role="tab">
       <h2 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#RefugeeLearners" aria-expanded="false" aria-controls="collapseTwo">
+        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#RefugeeLearners" aria-expanded="false" aria-controls="RefugeeLearners">
         What do you mean by "refugee learners?"
         </a>
       </h2>
     </div>
-    <div id="RefugeeLearners" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+    <div id="RefugeeLearners" class="panel-collapse collapse" role="tabpanel" aria-labelledby="GeneralQuestions">
       <div class="panel-body">
       We’re interested in supporting projects which benefit refugee youth, 
 		aged 15-24, who remain in the Middle East, and want to learn--whether that is in a formal school system or more 
