--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -12,7 +12,7 @@
 		        <link href="/css/main.css" rel="stylesheet" type="text/css">
 		        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 			<script src="/js/bootstrap.min.js"></script>
-
+			<script type="text/javascript">$(document).ready(function() {$('dropdown-toggle').dropdown()});</script>
 	</head>
 						      <body>
 						      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix-top" 
