--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 			<meta charset="utf-8">
-			<meta http-equiv="X-UA-Compatible" content"ie=edge&quot;">
+			<meta http-equiv="X-UA-Compatible" content"ie="edge&quot;">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<meta name="description" content="">
 			<meta name="author" content="">
@@ -10,30 +10,28 @@
 		      	<link href="/css/carousel.css" rel="stylesheet">
 			<link href="/css/creative.min.css" rel="stylesheet">
 		        <link href="/css/main.css" rel="stylesheet" type="text/css">
-		        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+			<link href="/css/aboutmain.css" rel="stylesheet" type="text/css">
+		        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 			<script src="/js/bootstrap.min.js"></script>
 			<script type="text/javascript">$(document).ready(function() {$('dropdown-toggle').dropdown()});</script>
 	</head>
 						      <body>
-						      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix-top" 
-							   style="background-color: white">
+						      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix-top" style="background-color: white">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-
-													  1">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="https://www.media.mit.edu/"><img alt="Media Lab" src="/Mit_medialab_logo.png" 
-											   height="30px" width="30px"></a>
+                <a class="navbar-brand page-scroll" href="https://www.media.mit.edu/"><img alt="Media Lab" src="/Mit_medialab_logo.png" height="30px" width="30px"></a>
                 <a class="navbar-brand" href="/">Refugee Learning Accelerator</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		    <ul class="nav navbar-nav navbar-right"> 
-			    <li><a href="/about">About</a></li>
+			    <li><a class="active class1" href="/about">About</a></li>
                 <li><a href="/program">How it Works</a></li>
-                <li><a class="active" href="/FAQ">FAQ</a></li>
+                <li><a href="/FAQ">FAQ</a></li>
                 <li><a href="/apply">Apply</a></li>
                 </ul>
             </div>
