--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -45,7 +45,7 @@
 <div class="header-content">
           <div class="header-content-inner">
               <h1 id="homeHeading">FAQ</h1>
-					   <hr>
+					   <hr style="color: white">
 				  <p style="color: white">Don't see what you are looking for below?<br>Email us at <a class="class2"
 															style="color:
 					  #FFCBA4" href="mailto:refugeelearning@media.mit.edu">refugeelearning@media.mit.edu</a></p>
