--- a/program/index.html
+++ b/program/index.html
@@ -58,7 +58,7 @@
 			   <div class="header-content-inner">
                   <h2>1. Apply (Aug-Sept 2017)</h2>
                       <p style:"color=#000000">You put together a team of two to five computer scientists, engineers, and designers all
-					      of whom have an interest in applying their technical skills to the real world problems
+					      of whom have an interest in applying their technical skills to real world problems
 					      facing refugee learners. You don’t need a concrete idea at this point: we’re here to help
 					      you understand the problem and make connections. We look for teams with a good mix of
 					      technical and design experience, commitment to some of the countries most affected by the
@@ -86,7 +86,7 @@
 					      who can deploy your project, we connect you with technical experts to further its
 					      development, we host workshops on relevant topics (entrepreneurship, monitoring &
 					      evaluation, etc.) and we provide funding to get prototypes tested in the field. You
-					      continue to work on the project and think about where you want to take it next--& we do
+					      continue to work on the project and think about where you want to take it next--and we do
 					      our best to support that vision.</p>
 	            </div>
 	        </div>
